[package]
name = "game_of_life"
version = "0.1.3"
authors = ["Diego Cardoso <dige0card0s0@hotmail.com>",
           "Ilya Bogdanov <fumlead@gmail.com",
           "Junjie Huang <huangjj.27@qq.com>"]
edition = "2018"

[dependencies]
rand = { version = "0.7", features = ["stdweb", "wasm-bindgen"] }
log = "0.4"
web_logger = "0.2"
yew = { path = "../.." }

[target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dependencies]
wasm-bindgen = "0.2"
