[package]
name = "multi_thread"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
web_logger = "0.2"
serde = "1.0"
serde_derive = "1.0"
yew = { path = "../.." }

[target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dependencies]
wasm-bindgen = "0.2"
