[package]
name = "npm_and_rest"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
serde = "1"
serde_derive = "1"
stdweb = "0.4.16"
yew = { path = "../.." }

[target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dependencies]
wasm-bindgen = "0.2"
