[package]
name = "multi_thread_web_sys"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
wasm-logger = "0.2"
serde = "1.0"
serde_derive = "1.0"
wasm-bindgen = "0.2"
yew = { path = "../../..", features = ["agent", "services", "web_sys"]}

[features]
app = []
worker = []
